refactor(post): 상수·검증 로직 중앙화 및 복잡 메서드 분해
- PostConstants.java 추가: DEFAULT_PAGE_SIZE, MAX_IMAGES_PER_POST 등 매직 넘버 제거
- PostValidationUtils.java 추가: 삭제 상태 확인, 댓글 계층 검증 등 공통 검증 로직 분리
- GroupPostCommandService#processImageUploads 메서드 → 4개의 책임별 메서드로 분해
- CommentQueryService#getCommentThread 메서드 → 6개의 단일 책임 메서드로 분해
- CommentService·GroupPostQueryService 중복 검증 코드 PostValidationUtils로 통합